# SlideCity

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: build.yml
assets/audio/: SUNO_PROMPTS.md
docs/brainstorms/: 2026-03-14-slidecity-design-brainstorm.md  2026-03-16-sc4-visual-upgrade-brainstorm.md  2026-03-17-rci-demand-economics-brainstorm.md
docs/plans/: 2026-03-14-feat-slidecity-autonomous-city-simulation-plan.md  2026-03-16-feat-sc4-visual-upgrade-plan.md  2026-03-17-feat-rci-demand-economics-plan.md
scripts/: build_terrain_atlas.py  download_building_models.sh  draw_sprites.py  generate_assets.py  generate_audio.py  generate_sprites_gemini.py  mask_sprites.py
src/: config.rs  game.rs  main.rs
src/audio/: mod.rs  mood.rs  sfx.rs  spotify.rs
src/grid/: mod.rs  neighbors.rs  terrain.rs
src/influence/: audience.rs  council.rs  mod.rs  suggestion.rs
src/mayor/: llm.rs  mod.rs  narration.rs  personality.rs
src/renderer/: camera.rs  iso.rs  lighting.rs  mod.rs  particles.rs  sprites.rs  tiles.rs
src/sim/: automaton.rs  demand.rs  desirability.rs  growth.rs  mod.rs  stats.rs  utilities.rs
src/ui/: influence_ui.rs  mayor_log.rs  minimap.rs  mod.rs  start_screen.rs  stats.rs
