[package]
name = "slidecity"
version = "0.1.0"
edition = "2021"
description = "Autonomous isometric city simulation"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
ureq = { version = "2", features = ["json"] }
